--- a/res/layout/dialog_about.xml
+++ b/res/layout/dialog_about.xml
@@ -66,7 +66,7 @@
 	        android:layout_height="wrap_content"
 	        android:autoLink="web"
 	        android:layout_margin="5dp"
-	        android:text="@string/about_gcm" />
+	        android:text="@string/about_mpn" />
 	    
 	</LinearLayout>
 </ScrollView>	
