use alternative layouts for v17

--- a/app/src/main/res/layout-large-land-v17/details_view.xml
+++ b/app/src/main/res/layout-large-land-v17/details_view.xml
@@ -86,8 +86,8 @@
             android:layout_weight="3"
             android:layout_height="wrap_content"
             android:textSize="18sp" 
-            android:paddingLeft="5dp"
-            android:paddingRight="0dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             />
@@ -98,10 +98,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="right"
+            android:gravity="end"
             android:textSize="18sp"
-            android:paddingLeft="0dp"
-            android:paddingRight="15dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
              />
@@ -112,8 +112,8 @@
             android:layout_weight="3"
             android:layout_height="wrap_content"
             android:textSize="18sp" 
-            android:paddingLeft="5dp"
-            android:paddingRight="0dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             />
@@ -123,11 +123,11 @@
             android:text="@string/no_data"
             android:layout_width="0dp"
             android:layout_weight="2"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_height="wrap_content"
             android:textSize="18sp" 
-            android:paddingLeft="0dp"
-            android:paddingRight="15dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             />
@@ -150,8 +150,8 @@
             android:layout_weight="3"
             android:layout_height="wrap_content"
             android:textSize="18sp" 
-            android:paddingLeft="5dp"
-            android:paddingRight="0dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             />
@@ -162,10 +162,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="right"
+            android:gravity="end"
             android:textSize="18sp"
-            android:paddingLeft="0dp"
-            android:paddingRight="15dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             />
@@ -174,8 +174,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:paddingLeft="5dp"
-            android:paddingRight="0dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:text="@string/open_price"
             android:textSize="18sp" 
             android:textColor="@color/white"
@@ -187,11 +187,11 @@
             android:text="@string/no_data"
             android:layout_width="0dp"
             android:layout_weight="2"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_height="wrap_content"
             android:textSize="18sp" 
-            android:paddingLeft="0dp"
-            android:paddingRight="15dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             />
@@ -211,8 +211,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:paddingLeft="5dp"
-            android:paddingRight="0dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:text="@string/bid"
             android:textSize="18sp" 
             android:textColor="@color/white"
@@ -225,10 +225,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="right"
+            android:gravity="end"
             android:textSize="18sp"
-            android:paddingLeft="0dp"
-            android:paddingRight="15dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             />
@@ -237,8 +237,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:paddingLeft="5dp"
-            android:paddingRight="0dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:text="@string/ask"
             android:textSize="18sp"
             android:textColor="@color/white"
@@ -250,11 +250,11 @@
             android:text="@string/no_data"
             android:layout_width="0dp"
             android:layout_weight="2"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_height="wrap_content"
             android:textSize="18sp" 
-            android:paddingLeft="0dp"
-            android:paddingRight="15dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             />
@@ -274,8 +274,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:paddingLeft="5dp"
-            android:paddingRight="0dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:text="@string/bid_quantity"
             android:textSize="18sp" 
             android:textColor="@color/white"
@@ -288,10 +288,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="right"
+            android:gravity="end"
             android:textSize="18sp"
-            android:paddingLeft="0dp"
-            android:paddingRight="15dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             />
@@ -300,8 +300,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:paddingLeft="5dp"
-            android:paddingRight="0dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:text="@string/ask_quantity"
             android:textSize="18sp" 
             android:textColor="@color/white"
@@ -313,11 +313,11 @@
             android:text="@string/no_data"
             android:layout_width="0dp"
             android:layout_weight="2"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_height="wrap_content"
-            android:textSize="18sp" 
-            android:paddingLeft="0dp"
-            android:paddingRight="15dp"
+            android:textSize="18sp"
+            android:paddingStart="0dp"
+            android:paddingEnd="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             />
@@ -337,8 +337,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:paddingLeft="5dp"
-            android:paddingRight="0dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:text="@string/min"
             android:textSize="18sp" 
             android:textColor="@color/white"
@@ -351,10 +351,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="right"
+            android:gravity="end"
             android:textSize="18sp"
-            android:paddingLeft="0dp"
-            android:paddingRight="15dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             />
@@ -363,8 +363,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:paddingLeft="5dp"
-            android:paddingRight="0dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
             android:text="@string/max"
             android:textSize="18sp" 
             android:textColor="@color/white"
@@ -376,11 +376,11 @@
             android:text="@string/no_data"
             android:layout_width="0dp"
             android:layout_weight="2"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_height="wrap_content"
-            android:textSize="18sp" 
-            android:paddingLeft="0dp"
-            android:paddingRight="15dp"
+            android:textSize="18sp"
+            android:paddingStart="0dp"
+            android:paddingEnd="15dp"
             android:textColor="@color/white"
             android:textStyle="bold"    
             />
