Standardize copyright notes.

--- a/app/src/main/res/values/about_strings.xml
+++ b/app/src/main/res/values/about_strings.xml
@@ -1,5 +1,5 @@
 <!-- 
-     Copyright 2014 Weswit Srl
+     Copyright (c) Lightstreamer Srl
     
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -20,7 +20,7 @@
         Lightstreamer server.</string>
     <string name="about_open_details">Touch one of the stocks in the list to see its details.</string>
     <string name="about_sources">Navigate the sources of the demo application on github 
-        github.com/Weswit/Lightstreamer-example-AdvStockList-client-android and check out our website 
+        github.com/Lightstreamer/Lightstreamer-example-AdvStockList-client-android and check out our website 
         www.lightstreamer.com</string>
     <string name="about_plot">Live charts are plotted using androidplot androidplot.com</string>
     <string name="about_mpn">An extended version of this demo, supporting mobile push notifications, is also avalable, 
